# atena

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
apis/: serializers.py  urls.py  views.py
apps/: admin.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
apps/migrations/: 0001_initial.py  0002_alter_repository_description.py  0003_repository_slug.py  0004_repositorypermission.py  0005_repositoryapikey.py  0006_alter_repositoryapikey_key.py  0007_repositoryrelease_repositoryartifact.py  0008_rename_repositoryartifact_repositoryreleaseartifact.py  0009_repositoryreleaseartifact_size.py  0010_repositoryapikey_user_repositoryrelease_updated_at_and_more.py  0011_repository_public.py
apps/templatetags/: convert_json.py  get_artifact.py
atena/: asgi.py  info.py  settings.py  urls.py  wsgi.py
static/: browserconfig.xml  site.webmanifest
static/css/: account.css  index.css
templates/: 403.html  404.html  500.html  _template.html  base.html  favicon.html
templates/apps/: home.html  repositories.html
templates/apps/repositories/: create.html  detail.html  edit.html  list.html  release.html
templates/apps/repositories/settings/: api.html  collaborators.html  collaborators_add.html  collaborators_update.html  general.html
templates/apps/repositories/snippets/: repository_pills_menu.html  settings_side_menu.html
templates/users/: login.html  signup.html
templates/users/settings/: appearance.html  profile.html
users/: admin.py  forms.py  models.py  signals.py  views.py
users/migrations/: 0001_initial.py  0002_alter_settings_theme.py
