[tool.poetry]
name = "atena"
version = "0.1.0"
description = ""
authors = ["Phawit Pornwattanakul <me@helloyeew.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "5.1.4"
python-decouple = "3.8"
django-admin-interface = "^0.29.3"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2024.10"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
django-cryptography = "^1.1"
djangorestframework = "^3.15.2"
boto3 = "^1.35.97"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
